projekt/kubernetes/my-backend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: my-backend-project-deployment
  labels:
    app: my-backend
    type: backend

spec:
  template:
    metadata:
      name: my-backend-pod
      labels:
        app: my-backend
        type: backend
    spec:
      containers:
        - name: my-backend-container
          image: kgadecki/mybackend
  replicas: 3
  selector:
    matchLabels:
      app: my-backend
      type: backend
