projekt/kubernetes/my-frontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: my-frontend-project-deployment
  labels:
    app: my-frontend
    type: frontend

spec:
  template:
    metadata:
      name: my-frontend-pod
      labels:
        app: my-frontend
        type: frontend
    spec:
      containers:
        - name: my-frontend-container
          image: kgadecki/myfrontend
          tty: true
  replicas: 1
  selector:
    matchLabels:
      app: my-frontend
      type: frontend
