projekt/kubernetes/my-redis-deployment.yml
apiVersion: apps/v1

# rodzaj bytu jaki tworzymy
kind: Deployment

#dostarcza opis
metadata:
    name: my-redis-project-deployment
    labels:
        app: my-redis
        type: cache

#okresla dokladnie byt ktory definiujemy
spec:
    template:
        metadata:
            name: my-redis-pod
            labels:
                app: my-redis
                type: cache

        spec:
            containers:
                - name: my-redis-container
                  image: redis
    replicas: 1
    selector:
        matchLabels:
            app: my-redis
            type: cache
