projekt/kubernetes/my-backend-service.yml
apiVersion: v1

kind: Service

metadata:
  name: my-backend-project-service

spec:
  type: ClusterIP
  ports:
    - targetPort: 5000
      port: 5000

  selector:
    app: my-backend
    type: backend
