projekt/kubernetes/my-frontend-service.yml
apiVersion: v1

kind: Service

metadata:
  name: my-frontend-project-service

spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000

  selector:
    app: my-frontend
    type: frontend
