projekt/kubernetes/my-postgres-service.yml
apiVersion: v1

kind: Service

metadata:
  name: my-postgres-project-service

spec:
  type: ClusterIP
  ports:
    - targetPort: 5432
      port: 5432

  selector:
    app: my-postgres-project
    type: db
