projekt/kubernetes/my-redis-service.yml
apiVersion: v1

kind: Service

metadata:
    name: my-redis-project-service

spec:
    type: ClusterIP
    ports:
        - targetPort: 6379
          port: 6379
    
    selector:
        app: my-redis
        type: cache
