projekt/kubernetes/my-ingress-service.yml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
  name: my-ingress-project-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: my-backend-project-service
              servicePort: 5000
          - path: /(.*)
            backend:
              serviceName: my-frontend-project-service
              servicePort: 3000
